# backbone_regeneration

./: .gitignore  LICENSE  README.md  environment.yml  model.pth  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: tests.yml
logs/1751026162.2813592/: events.out.tfevents.1751026162.node_13.58561.1
logs/2025-06-28_16-07-54/: events.out.tfevents.1751126887.node_13.9486.0
logs/2025-06-28_17-01-22/: events.out.tfevents.1751130095.node_13.22561.0
logs/2025-06-28_17-44-17/: events.out.tfevents.1751132669.node_13.39012.0
logs/2025-06-28_18-40-27/: events.out.tfevents.1751136040.node_13.53052.0
logs/2025-06-28_18-45-40/: events.out.tfevents.1751136353.node_13.55106.0
logs/2025.06.29_17:34:18/: events.out.tfevents.1751218469.node_13.36729.0
logs/2025.06.29_18:43:24/: events.out.tfevents.1751222616.node_13.71983.0
logs/2025.06.29_18:47:30/: events.out.tfevents.1751223537.node_13.77148.1
logs/2025.06.30_11:33:30/: events.out.tfevents.1751283222.node_13.14699.0  events.out.tfevents.1751283823.node_13.14699.1
logs/2025.06.30_11:55:36/: events.out.tfevents.1751284549.node_13.33957.0
logs/32_precision/: events.out.tfevents.1755369795.node_13.47636.0  hparams.yaml  projector_config.pbtxt
logs/8_workers/: projector_config.pbtxt  (+1 more)
manifests/: thesis_2026-05-17.json
model/: model.json
scripts/: analyze.py  compare_schedules_snr.py  config.py  create_dataset.py  export.py  run_factorial_matrix.py  run_overfit_debug_matrix.py  sweep_num_timesteps.py  train.py
src/: analyze.py  bridge_closure.py  config.py  dataset.py  export.py  export_to_onnx.py  model.py  predict.py  torsion_constants.py  torsion_geometry.py  train.py  utils.py  visualize.ipynb  visualize.py  wrapped_score_diffusion.py
tests/: test_bridge_closure_loss.py  test_closure_metrics_model.py  test_dataset_runtime_paths.py  test_decoder_geometry.py  test_geometry.py  test_inference_batching.py  test_knn_baseline.py  test_molprobity.py  test_pdb_manifest.py  test_phenix_hybrid.py  test_pipeline_wrapped_layout.py  test_runtime_analysis.py  test_runtime_and_local_geometry.py  test_score_diffusion_integration.py  test_sugar_analytic_and_metrics.py  test_torsion_layout.py  test_wrapped_diffusion.py  test_wrapped_score_diffusion.py
(+9544 files in other folders)
